--- a/src/i18n/translations/en/common.json
+++ b/src/i18n/translations/en/common.json
@@ -64,6 +64,7 @@
     "enter_record_label": "Enter Record Label",
     "english": "English",
     "spanish": "Spanish",
+    "search": "Search",
 
     "enter_director": "Enter Director",
     "director": "Director",
