--- a/src/i18n/translations/es/common.json
+++ b/src/i18n/translations/es/common.json
@@ -20,6 +20,7 @@
     "settings": "Ajustes",
     "admin": "Administrador",
     "loading": "Cargando ...",
+    "search": "Buscar",
 
     "audios": "Audios",
     "videos": "Videos",
